# Thermodyne-CRM

./: .env.prod.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: .dockerignore  AGENTS.md  Dockerfile.dev  Dockerfile.prod  pyproject.toml  settings.toml
backend/alembic/: AGENTS.md  env.py
backend/app/: main.py
backend/app/api/v1/: AGENTS.md  router.py
backend/app/api/v1/health/: AGENTS.md  router.py
backend/app/api/v1/user/: AGENTS.md  dependencies.py  router.py
backend/app/core/: AGENTS.md  config.py  database.py  logger.py  security.py
backend/app/models/: AGENTS.md  user.py
backend/app/schemas/: AGENTS.md  user.py
frontend/: Dockerfile.dev  Dockerfile.prod
frontend/src/app/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
